classDiagram
    direction TB

    %% ===== Domain entities =====

    class User {
        -id: int
        -username: String
        -email: String
        -password: String
        -role: Role
        -status: AccountStatus
        +login() boolean
        +logout() void
    }

    class Project {
        -id: int
        -key: String
        -name: String
        -description: String
        -joinCode: String
        -createdAt: Date
        +addMember(user) void
        +removeMember(user) void
    }

    class ProjectMember {
        -id: int
        -role: ProjectRole
        -joinedAt: Date
    }

    class ProjectJoinRequest {
        -id: int
        -status: JoinRequestStatus
        -requestedAt: Date
        -decidedAt: Date
        +approve() void
        +reject() void
    }

    class Board {
        -id: int
        -name: String
        -type: BoardType
        +addIssue(issue) void
        +moveIssue(issue, newStatus) void
    }

    class Sprint {
        -id: int
        -name: String
        -goal: String
        -startDate: Date
        -endDate: Date
        +start() void
        +complete() void
    }

    class Issue {
        -id: int
        -title: String
        -description: String
        -type: IssueType
        -status: Status
        -priority: Priority
        -createdAt: Date
        -dueDate: Date
        +assignTo(user) void
        +updateStatus(newStatus) void
    }

    class Comment {
        -id: int
        -content: String
        -createdAt: Date
        +edit(newContent) void
    }

    %% One accepted move of one card. No methods and no setters on purpose: it is written once,
    %% by Issue.updateStatus, and only read after that.
    class StatusChange {
        -id: int
        -fromStatus: Status
        -toStatus: Status
        -changedAt: Date
    }

    class Attachment {
        -id: int
        -fileName: String
        -fileUrl: String
        -fileSize: int
        -uploadedAt: Date
    }

    %% ===== AI layer =====

    class AIClassification {
        -id: int
        -suggestedType: IssueType
        -suggestedPriority: Priority
        -suggestedTeam: String
        -effortHint: Effort
        -sentimentScore: float
        -confidence: float
        -missingInfo: List~String~
        -reviewStatus: ReviewStatus
        -modelVersion: String
        -createdAt: Date
        +isHighConfidence() boolean
        +applyTo(issue) void
    }

    class ClassificationService {
        <<service>>
        +classify(issue) AIClassification
        +findSimilarIssues(issue) List~Issue~
    }

    %% ===== Enumerations =====

    class Role {
        <<enumeration>>
        DEVELOPER
        MANAGER
        ADMIN
    }

    class ProjectRole {
        <<enumeration>>
        PROJECT_MANAGER
        MEMBER
    }

    class JoinRequestStatus {
        <<enumeration>>
        PENDING
        APPROVED
        REJECTED
    }

    class AccountStatus {
        <<enumeration>>
        PENDING
        ACTIVE
        DISABLED
    }

    class Status {
        <<enumeration>>
        TO_DO
        IN_PROGRESS
        DONE
    }

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
        CRITICAL
    }

    class BoardType {
        <<enumeration>>
        KANBAN
        SCRUM
    }

    class IssueType {
        <<enumeration>>
        BUG
        FEATURE
        SUPPORT
        TASK
    }

    class Effort {
        <<enumeration>>
        SMALL
        MEDIUM
        LARGE
    }

    class ReviewStatus {
        <<enumeration>>
        PENDING
        AUTO_APPLIED
        CONFIRMED
        OVERRIDDEN
    }

    %% ===== Core relationships =====

    %% Membership is an association class: the link itself carries a role.
    %% A user is a MEMBER of one project and the PROJECT_MANAGER of another.
    Project "1" *-- "0..*" ProjectMember : has
    User    "1" -- "0..*" ProjectMember : is
    Project "1" *-- "0..*" ProjectJoinRequest : receives
    User    "1" -- "0..*" ProjectJoinRequest : asks
    ProjectJoinRequest ..> ProjectMember : creates when approved

    Project "1" *-- "0..*" Issue : contains
    Project "1" -- "1..*" Board : has
    Board "1" o-- "0..*" Issue : organizes
    Board "1" -- "0..*" Sprint : plans
    Sprint "0..1" o-- "0..*" Issue : includes
    User "0..1" -- "0..*" Issue : assignee
    User "1" -- "0..*" Issue : reporter
    User "1" -- "0..*" Comment : writes
    Issue "1" *-- "0..*" Comment : has
    User "1" -- "0..*" StatusChange : moves
    Issue "1" *-- "0..*" StatusChange : remembers
    Issue "1" *-- "0..*" Attachment : has

    %% ===== AI layer relationships =====

    Issue "1" *-- "0..1" AIClassification : has
    Issue "0..*" -- "0..*" Issue : related to
    ClassificationService ..> Issue : reads
    ClassificationService ..> AIClassification : creates

    %% ===== Enum anchors =====

    User ..> Role
    User ..> AccountStatus
    ProjectMember ..> ProjectRole
    ProjectJoinRequest ..> JoinRequestStatus
    Issue ..> Status
    Issue ..> Priority
    Issue ..> IssueType
    Board ..> BoardType
    AIClassification ..> Effort
    AIClassification ..> ReviewStatus
